--- a/index.html
+++ b/index.html
@@ -14,12 +14,38 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>Ristorante Con Fusion</title>
   </head>
 
   <body>
-    <header class="jumbotron ">
+    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#Navbar"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="container">
+        <div class="collapse navbar-collapse" id="Navbar">
+          <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./aboutus.html">About</a>
+            </li>
+            <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
+            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <header class="jumbotron">
       <div class="container">
         <div class="row row-header">
           <div class="col-12 col-sm-6">
@@ -89,7 +115,7 @@
             <h5>Links</h5>
             <ul class="list-unstyled">
               <li><a href="#">Home</a></li>
-              <li><a href="#">About</a></li>
+              <li><a href="./aboutus.html">About</a></li>
               <li><a href="#">Menu</a></li>
               <li><a href="#">Contact</a></li>
             </ul>
