--- a/aboutus.html
+++ b/aboutus.html
@@ -10,6 +10,14 @@
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="./node_modules/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./node_modules/bootstrap-social/bootstrap-social.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Ristorante Con Fusion: About Us</title>
   </head>
@@ -30,13 +38,25 @@
           <a class="navbar-brand" href="#">Ristorante Con Fusion</a>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">Home</a>
+              <a class="nav-link" href="./index.html"
+                ><span class="fa fa-home fa-lg"></span> Home</a
+              >
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="./aboutus.html">About</a>
+              <a class="nav-link" href="#"
+                ><span class="fa fa-info fa-lg"></span> About</a
+              >
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Menu</a></li>
-            <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><span class="fa fa-list fa-lg"></span> Menu</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#"
+                ><span class="fa fa-address-card fa-lg"></span> Contact</a
+              >
+            </li>
           </ul>
         </div>
       </div>
@@ -94,7 +114,7 @@
         <div class="col-12 align-items-center">
           <h2>Corporate Leadership</h2>
           <h3>Peter Pan <small>Chief Epicurious Officer</small></h3>
-          <p class="d-none d-sm-block d-md-none">
+          <p class="d-none d-sm-block">
             Our CEO, Peter, credits his hardworking East Asian immigrant parents
             who undertook the arduous journey to the shores of America with the
             intention of giving their children the best future. His mother's
@@ -106,7 +126,7 @@
             culinary connections.
           </p>
           <h3>Dhanasekaran Witherspoon <small>Chief Food Officer</small></h3>
-          <p class="d-none d-sm-block d-md-none">
+          <p class="d-none d-sm-block">
             Our CFO, Danny, as he is affectionately referred to by his
             colleagues, comes from a long established family tradition in
             farming and produce. His experiences growing up on a farm in the
@@ -117,7 +137,7 @@
             >
           </p>
           <h3>Agumbe Tang <small>Chief Taste Officer</small></h3>
-          <p class="d-none d-sm-block d-md-none">
+          <p class="d-none d-sm-block">
             Blessed with the most discerning gustatory sense, Agumbe, our CTO,
             personally ensures that every dish that we serve meets his exacting
             tastes. Our chefs dread the tongue lashing that ensues if their dish
@@ -125,7 +145,7 @@
             <em>You click only if you survive my lick.</em>
           </p>
           <h3>Alberto Somayya <small>Executive Chef</small></h3>
-          <p class="d-none d-sm-block d-md-none">
+          <p class="d-none d-sm-block">
             Award winning three-star Michelin chef with wide International
             experience having worked closely with whos-who in the culinary
             world, he specializes in creating mouthwatering Indo-Italian fusion
@@ -157,20 +177,22 @@
               121, Clear Water Bay Road<br />
               Clear Water Bay, Kowloon<br />
               HONG KONG<br />
-              Tel.: +852 1234 5678<br />
-              Fax: +852 8765 4321<br />
-              Email: <a href="mailto:confusion@food.net">confusion@food.net</a>
+              <i class="fa fa-phone fa-lg"></i>: +852 1234 5678<br />
+              <i class="fa fa-fax fa-lg"></i>: +852 8765 4321<br />
+              <i class="fa fa-envelope fa-lg"></i>:
+              <a href="mailto:confusion@food.net">confusion@food.net</a>
             </address>
           </div>
           <div class="col-12 col-sm-4 align-self-center">
             <div class="text-center">
-              <a href="http://google.com/+">Google+</a>
-              <a href="http://www.facebook.com/profile.php?id=">Facebook</a>
-              <a href="http://www.linkedin.com/in/">LinkedIn</a>
-              <a href="http://twitter.com/">Twitter</a>
-              <a href="http://youtube.com/">YouTube</a>
-              <a href="mailto:">Mail</a>
-            </div>
+              <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
+              <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+              <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
+              <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
+              <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+              <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
+          </div>
+
           </div>
         </div>
         <div class="row justify-content-center">
