--- a/index.html
+++ b/index.html
@@ -39,7 +39,9 @@
 
       <div class="container">
         <div class="collapse navbar-collapse" id="Navbar">
-          <a class="navbar-brand mr-auto" href="#"><img src="img/logo.png" height="30" width="41"></a>
+          <a class="navbar-brand mr-auto" href="#"
+            ><img src="img/logo.png" height="30" width="41"
+          /></a>
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
               <a class="nav-link" href="#"
@@ -76,9 +78,12 @@
               your culinary senses!
             </p>
           </div>
+          <div class="col-12 col-sm-3 align-self-center">
+            <img src="img/logo.png" class="img-fluid" />
+          </div>
           <div class="col-12 col-sm align-self-center">
-            <img src="img/logo.png" class="img-fluid">
-        </div>
+            <a href="#form" role="button" class="btn btn-warning btn-block">Reverse Table</a>
+          </div>
         </div>
       </div>
     </header>
@@ -88,32 +93,42 @@
         <div class="col-12 col-sm-4 order-sm-last col-md-3">
           <h3>Our Lipsmacking Culinary Creations</h3>
         </div>
-        <div class="media">
-          <img class="d-flex mr-3 img-thumbnail align-self-center"
-                  src="img/uthappizza.png" alt="Uthappizza">
+        <div class="col-12 col-sm-8 col-md-9 media">
+          <img
+            class="d-flex mr-3 img-thumbnail align-self-center"
+            src="img/uthappizza.png"
+            alt="Uthappizza"
+          />
           <div class="media-body">
-              <h2 class="mt-0">Uthappizza<span class="badge badge-danger">HOT</span><span class="badge badge-pill badge-secondary">$4.99</span></h2>
-              <p class="d-none d-sm-block">A unique combination of Indian Uthappam (pancake) and
-                  Italian pizza, topped with Cerignola olives, ripe vine
-                  cherry tomatoes, Vidalia onion, Guntur chillies and
-                  Buffalo Paneer.</p>
+            <h2 class="mt-0">
+              Uthappizza <span class="badge badge-danger">HOT</span
+              ><span class="badge badge-pill badge-secondary">$4.99</span>
+            </h2>
+            <p class="d-none d-sm-block">
+              A unique combination of Indian Uthappam (pancake) and Italian
+              pizza, topped with Cerignola olives, ripe vine cherry tomatoes,
+              Vidalia onion, Guntur chillies and Buffalo Paneer.
+            </p>
           </div>
-      </div>
-
+        </div>
       </div>
 
       <div class="row row-content align-items-center">
         <div class="col-12 col-sm-4 col-md-3">
           <h3>This Month's Promotions</h3>
         </div>
-        <div class="col-12 col-sm col-md">
-          <h2>Weekend Grand Buffet</h2>
-          <p>
-            Featuring mouthwatering combinations with a choice of five different
-            salads, six enticing appetizers, six main entrees and five choicest
-            desserts. Free flowing bubbly and soft drinks. All for just $19.99
-            per person
-          </p>
+        <div class="col-12 col-sm-8 col-md-9 media">
+          <div class="media-body">
+            <h2 class="mt-0">Weekend Grand Buffet <span class="badge badge-danger">NEW</span
+              ></h2>
+            <p class="d-none d-sm-block">
+              Featuring mouthwatering combinations with a choice of five different
+              salads, six enticing appetizers, six main entrees and five choicest
+              desserts. Free flowing bubbly and soft drinks. All for just $19.99
+              per person
+            </p>
+          </div>
+          <img src="./img/buffet.png" alt="buffet" class="d-flex img-thumbnail align-self-center">
         </div>
       </div>
 
@@ -122,19 +137,118 @@
           <h3>Meet our Culinary Specialists</h3>
         </div>
         <div class="media">
-          <img class="d-flex mr-3 img-thumbnail align-self-center"
-                  src="img/alberto.png" alt="Alberto Somayya">
+          <img
+            class="d-flex mr-3 img-thumbnail align-self-center"
+            src="img/alberto.png"
+            alt="Alberto Somayya"
+          />
           <div class="media-body">
-              <h2 class="mt-0">Alberto Somayya</h2>
-              <h4>Executive Chef</h4>
-              <p class="d-none d-sm-block">Award winning three-star Michelin chef with wide
-                  International experience having worked closely with
-                  whos-who in the culinary world, he specializes in
-                  creating mouthwatering Indo-Italian fusion experiences.
-                  </p>
+            <h2 class="mt-0">Alberto Somayya</h2>
+            <h4>Executive Chef</h4>
+            <p class="d-none d-sm-block">
+              Award winning three-star Michelin chef with wide International
+              experience having worked closely with whos-who in the culinary
+              world, he specializes in creating mouthwatering Indo-Italian
+              fusion experiences.
+            </p>
           </div>
+        </div>
       </div>
-      
+      <div class="row row-content justify-content-center" id="form">
+        <div class="col-12 p-0 col-md-7 border">
+          <div class="p-2 bg-warning text-light">
+            <h3 class="col-12  ">Reverse Table</h3>
+
+          </div>
+          <div class="col-12">
+            <form class="p-2 mt-2">
+              <div class="form-group row">
+                <label class="col-12 col-md-2 col-form-label">Number of Guests</label>
+                <div class="col-md-10">
+                  <div class="form-check-inline">
+                    <input
+                      type="radio"
+                      name="numberguest"
+                      class="form-check-input"
+                      checked
+                    />
+                    <label for="numberguest" class="form-check-label">1</label>
+                  </div>
+                  <div class="form-check-inline">
+                    <input
+                      type="radio"
+                      name="numberguest"
+                      class="form-check-input"
+                    />
+                    <label for="numberguest" class="form-check-label">2</label>
+                  </div>
+                  <div class="form-check-inline">
+                    <input
+                      type="radio"
+                      name="numberguest"
+                      class="form-check-input"
+                    />
+                    <label for="numberguest" class="form-check-label">3</label>
+                  </div>
+                  <div class="form-check-inline">
+                    <input
+                      type="radio"
+                      name="numberguest"
+                      class="form-check-input"
+                    />
+                    <label for="numberguest" class="form-check-label">4</label>
+                  </div>
+                  <div class="form-check-inline">
+                    <input
+                      type="radio"
+                      name="numberguest"
+                      class="form-check-input"
+                    />
+                    <label for="numberguest" class="form-check-label">5</label>
+                  </div>
+                  <div class="form-check-inline">
+                    <input
+                      type="radio"
+                      name="numberguest"
+                      class="form-check-input"
+                    />
+                    <label for="numberguest" class="form-check-label">6</label>
+                  </div>
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="dateandtime" class="col-12 col-md-2 col-form-label"
+                  >Date and Time</label
+                >
+                <div class="col-12 col-md-4">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="date"
+                    name="date"
+                    placeholder="Date"
+                  />
+                </div>
+                <div class="col-12 col-md-4">
+                  <input
+                    type="text"
+                    class="form-control"
+                    id="time"
+                    name="time"
+                    placeholder="Time"
+                  />
+                </div>
+              </div>
+              <div class="form-group row">
+                <div class="offset-md-2 col-md-10">
+                  <button type="submit" class="btn btn-primary">
+                    Submit
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
 
@@ -164,14 +278,35 @@
           </div>
           <div class="col-12 col-md-4 align-self-center">
             <div class="text-center">
-              <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
-              <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
-              <a class="btn btn-social-icon btn-linkedin" href="http://www.linkedin.com/in/"><i class="fa fa-linkedin"></i></a>
-              <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i></a>
-              <a class="btn btn-social-icon btn-google" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
-              <a class="btn btn-social-icon" href="mailto:"><i class="fa fa-envelope-o"></i></a>
-          </div>
-
+              <a
+                class="btn btn-social-icon btn-google"
+                href="http://google.com/+"
+                ><i class="fa fa-google-plus"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-facebook"
+                href="http://www.facebook.com/profile.php?id="
+                ><i class="fa fa-facebook"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-linkedin"
+                href="http://www.linkedin.com/in/"
+                ><i class="fa fa-linkedin"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-twitter"
+                href="http://twitter.com/"
+                ><i class="fa fa-twitter"></i
+              ></a>
+              <a
+                class="btn btn-social-icon btn-google"
+                href="http://youtube.com/"
+                ><i class="fa fa-youtube"></i
+              ></a>
+              <a class="btn btn-social-icon" href="mailto:"
+                ><i class="fa fa-envelope-o"></i
+              ></a>
+            </div>
           </div>
         </div>
         <div class="row justify-content-center">
